Fix Customer Past Bookings Alignment

--- a/FrontEnd/src/index.css
+++ b/FrontEnd/src/index.css
@@ -358,6 +358,7 @@ input {
   font-weight: 600;
   color: #303030;
   text-align: left;
+  margin-left: 0.4em;
   padding-bottom: 20px;
 }
 
